Fix big spaces in nagivation
With changes in body section, there is a huge gap in
nagivation. Fix that by adding fixed width for logo and
rest of link to be flexible.

--- a/themes/codeisscience/static/css/style.less
+++ b/themes/codeisscience/static/css/style.less
@@ -129,30 +129,43 @@ main {
   color: #E7403C;
 }
 /*Navigation*/
+
+.main-navigation {
+  background-color: #069;
+  overflow: hidden;
+}
+
 .nav-bar {
   display: flex;
-  justify-content: flex-start;
+  justify-content: space-between;
   margin: 0;
   padding: 0;
-  overflow: hidden;
-  background-color: #069;
 }
 
 .nav-bar > li {
-  flex: 1;
-  padding-top: 20px;
-  right: 0;
-  left: auto;
+  align-self: center;
   list-style-type: none;
+
+  &.main-logo {
+    flex: 0 0 auto;
+    width: 250px;
+
+    @media screen and (min-width:1200px) {
+      width: 70%;
+    }
+  }
 }
 
 .nav-bar > li a {
   display: block;
   color: white;
-  text-align: center;
-  padding: 14px 18px;
   text-decoration: none;
   border-bottom: 3px solid #069;
+}
+
+.nav-bar > li a:not(.logo) {
+  text-align: center;
+  padding: 14px 18px;
 }
 
 @media all and (max-width: 700px){
@@ -162,7 +175,7 @@ main {
   }
 
   .nav-bar > li {
-  flex-basis: 33%;
+    flex-basis: 33%;
   }
 
   .logo {
@@ -170,7 +183,7 @@ main {
   }
 }
 
-.nav-bar li a:hover:not(.active) {
+.nav-bar li a:hover:not(.logo):not(.active) {
   border-bottom: 3px solid #E7403C;
   color: #E7403C;
 }
@@ -230,9 +243,9 @@ main {
   flex-direction: row;
 }
 /*Logo*/
+
 .logo {
-  float: left;
-  margin: 10px 10em;
+  margin: 10px 30px;
 }
 
 nav {
